# infakt-cli

./: pyproject.toml
src/infakt_cli/: __init__.py  config.py
