[project]
name = "infakt-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tomasz Cebula", email = "tcebula@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "vcrpy>=7.0.0",
]

[project.scripts]
infakt-cli = "infakt_cli:main"

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
